--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -5,11 +5,11 @@ import = [
 
 [window]
 #opacity = 0.9
+padding = { x = 8, y = 8 }
 
 [keyboard]
 bindings = [
   { key = "C", mods = "Control", action = "Copy" },
   { key = "V", mods = "Control", action = "Paste" },
   { key = "K", mods = "Control", chars = "\u0003" },
-
 ]
